--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">THORN</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="item_main">首页</string>
+    <string name="item_app">赛事</string>
+    <string name="item_find">娱乐</string>
+    <string name="item_fun">游乐场</string>
+    <string name="item_profile">我的</string>
 </resources>
