--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,43 @@
     <string name="app_name">THORN</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="item_main">首页</string>
-    <string name="item_app">赛事</string>
-    <string name="item_find">娱乐</string>
+    <string name="item_rank">排行</string>
+    <string name="item_discover">发现</string>
+    <string name="item_mine">我的</string>
+
     <string name="item_fun">游乐场</string>
     <string name="item_profile">我的</string>
     <string name="item_empty"></string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_activity_main3">Main3Activity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_main4">Main4Activity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_example">Example action</string>
+
+    <!-- Navigation -->
+    <string name="nav_login">点击头像登录</string>
+    <string name="nav_home">首页</string>
+    <string name="nav_vip">我的大会员</string>
+    <string name="nav_vip_point">我的大会员</string>
+    <string name="nav_unicom">免流量服务</string>
+    <string name="nav_download">离线缓存</string>
+    <string name="nav_view_later">稍后再看</string>
+    <string name="nav_star">我的收藏</string>
+    <string name="nav_history">历史记录</string>
+    <string name="nav_people">我的关注</string>
+    <string name="nav_account_balance_wallet">B币钱包</string>
+    <string name="nav_color_lens">主题选择</string>
+    <string name="nav_settings">设置与帮助</string>
+
 </resources>
